--- a/app/src/main/res/layout/toolbar_main.xml
+++ b/app/src/main/res/layout/toolbar_main.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
-    android:layout_height="?attr/actionBarSize"
+    android:layout_height="60dp"
     android:background="?attr/colorPrimary"
     android:elevation="4dp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
@@ -45,18 +46,18 @@
 
             <TextView
                 android:id="@+id/basketBadge"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="top|end"
+                android:layout_width="18dp"
+                android:layout_height="18dp"
+                android:layout_gravity="center|end"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="-4dp"
                 android:background="@drawable/badge_background"
                 android:gravity="center"
                 android:minWidth="16dp"
-                android:padding="4dp"
                 android:textColor="@android:color/white"
                 android:textSize="12sp"
-                android:visibility="gone" />
+                android:visibility="gone"
+                tools:text="1" />
 
         </FrameLayout>
 
