--- a/app/src/main/res/layout/fragment_bet_detail.xml
+++ b/app/src/main/res/layout/fragment_bet_detail.xml
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
             android:text="@string/event_detail_format"
-            android:textSize="14sp" />
+            android:textSize="@dimen/text_value_14" />
 
         <TextView
             android:layout_width="match_parent"
@@ -46,7 +46,7 @@
             android:id="@+id/addToBasketButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="Kupona Ekle" />
+            android:layout_marginTop="@dimen/value_16"
+            android:text="@string/add_to_coupon" />
     </LinearLayout>
 </ScrollView> 
