--- a/app/src/main/res/layout/item_basket.xml
+++ b/app/src/main/res/layout/item_basket.xml
@@ -3,21 +3,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
-    app:cardCornerRadius="8dp"
-    app:cardElevation="4dp">
+    android:layout_margin="@dimen/value_8"
+    app:cardCornerRadius="@dimen/value_8"
+    app:cardElevation="@dimen/value_4">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp">
+        android:padding="@dimen/value_16">
 
         <TextView
             android:id="@+id/basketEventNameTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:textSize="16sp"
+            android:layout_marginEnd="@dimen/value_8"
+            android:textSize="@dimen/text_value_16"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/basketOddTextView"
             app:layout_constraintStart_toStartOf="parent"
@@ -28,7 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
-            android:textSize="16sp"
+            android:textSize="@dimen/text_value_16"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/closeButton"
@@ -36,8 +36,8 @@
 
         <ImageButton
             android:id="@+id/closeButton"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+            android:layout_width="@dimen/value_24"
+            android:layout_height="@dimen/value_24"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:src="@drawable/ic_close"
             app:layout_constraintBottom_toBottomOf="parent"
