--- a/app/src/main/res/layout/item_odd.xml
+++ b/app/src/main/res/layout/item_odd.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="8dp">
+    android:padding="@dimen/value_8">
 
     <TextView
         android:id="@+id/oddTypeTextView"
